src/main/resources/scss/content/components/_view.scss
.content-view {
	.fixed-footer {
		min-height: 4rem;

		& > .the-fixed {
			border: 1px solid $tertiary-grey;
			border-width: 1px 0 0 0;
			background: #f8f8f8;
			position: fixed;
			bottom: 0;
			left: 0;
			right: 0;
		}
	}

	nti-content *:not(input):not(textarea) {
		-webkit-user-select: text;
		-moz-user-select: text;
		-ms-user-select: text;
		-o-user-select: text;
		user-select: text;
	}


	&.open-discussions-drawer {
		// @include transform(translate3d(-90vw, 0, 0));
		left: -90vw;
		.discussions {
			@include transform(translate3d(10vw, 0, 0));
		}

		.close-gutter-drawer {
			display: block;
		}

		.gutter .bin {
			background: #fff;
		}

	}

	position: relative;
	top: 0; left: 0;
	@include transition('left 0.4s');

	.close-gutter-drawer {
		@include animation('fadeIn 0.4s');
		position: absolute; top: 0; left: 0; right: 0; bottom: 0;
		background: rgba(0,0,0,0.2);
		display: none;
	}

	.gutter {
		position: absolute;
		top: 0;
		right: 0;
		width: 1rem;
		z-index: 9;
		//Degugging:
		/*bottom: 0;*/
		/*border-left: 1px dashed grey;*/
		//Debug End

		.bin {
			position: absolute;
			left: 0;
			color: $primary-blue;
			background: rgba(255,255,255,0.7);
			font-size: 0.75rem;
			padding: 0.4rem 4rem 0.4rem 0.5rem;
			border-radius: 3px;
			background: transparent;
			@include transform(translate3d(-0.65rem, -0.35rem, 0));
			//Debugging:
			/*border: 1px solid;*/

			&.active {
				background: #3fb3f6;
				color: #fff !important;
				font-weight: bolder;
				box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.4);
			}
		}


	}
}

